bd-core-dvp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-dvp-api
  namespace: bd-dvp
spec:
  selector:
    matchLabels:
      app: bd-dvp-api
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: bd-dvp-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - mysql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: bd-dvp-api
          image: quay.io/bot_detector/bd-core-files:3a08ec9
          resources:
            requests:
              cpu: 50m
              memory: 200M
          ports:
            - name: dvp-api-port
              containerPort: 5000
