bd-core-dvp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-dvp-api-service
  namespace: bd-dvp
spec:
  selector:
    app: bd-dvp-api
  ports:
    - name: dvp-api-port
      port: 5000
      protocol: TCP
      targetPort: dvp-api-port
