bd-core-dvp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-dvp-api-ingress
  namespace: bd-dvp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 1M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1M
    nginx.ingress.kubernetes.io/global-rate-limit: '100'
    nginx.ingress.kubernetes.io/global-rate-limit-window: 1m
    nginx.ingress.kubernetes.io/global-rate-limit-key: $remote_addr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.dev.osrsbotdetector.com
      secretName: api-tls
  rules:
    - host: api.dev.osrsbotdetector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bd-dvp-api-service
                port:
                  name: dvp-api-port
